// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders Auth on tokens unchanged 1`] = `
<div>
  <form
    class="memori-auth-widget--form"
    name="memoriAuth"
  >
    <fieldset
      class="memori-auth-widget--tokens-fieldset"
      name="tokens"
    >
      <legend>
        auth.tokens
        : 
      </legend>
      <label
        class="memori-auth-widget--token"
      >
        <input
          autocomplete="off"
          class="memori-auth-widget--input"
          name="tokens.0"
          placeholder="Recovery token"
          required=""
          type="password"
        />
      </label>
      <button
        class="memori-button memori-button--primary memori-button--md memori-auth-widget--token-add"
        tabindex="0"
        type="button"
      >
        <span
          class="memori-button__icon"
        >
          <svg
            class="lucide lucide-plus"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5 12h14"
            />
            <path
              d="M12 5v14"
            />
          </svg>
        </span>
        <span
          class="memori-button__content"
        >
          auth.addToken
        </span>
      </button>
      <hr />
      <button
        class="memori-button memori-button--outline memori-button--md"
        tabindex="0"
        type="button"
      >
        <span
          class="memori-button__content"
        >
          auth.usePassword
        </span>
      </button>
    </fieldset>
    <button
      class="memori-button memori-button--primary memori-button--md memori-auth-widget--submit"
      tabindex="0"
      type="submit"
    >
      <span
        class="memori-button__content"
      >
        confirm
      </span>
    </button>
  </form>
</div>
`;

exports[`renders Auth unchanged 1`] = `
<div>
  <form
    class="memori-auth-widget--form"
    name="memoriAuth"
  >
    <fieldset
      class="memori-auth-widget--password-fieldset"
    >
      <label>
        Password:
         
        <input
          class="memori-auth-widget--input"
          name="password"
          placeholder="Password"
          required=""
          type="password"
        />
      </label>
    </fieldset>
    <button
      class="memori-button memori-button--primary memori-button--md memori-auth-widget--submit"
      tabindex="0"
      type="submit"
    >
      <span
        class="memori-button__content"
      >
        confirm
      </span>
    </button>
  </form>
</div>
`;

exports[`renders Auth with modal unchanged 1`] = `
<div
  aria-hidden="true"
  data-base-ui-inert=""
/>
`;

exports[`renders Auth with tokens unchanged 1`] = `
<div>
  <form
    class="memori-auth-widget--form"
    name="memoriAuth"
  >
    <fieldset
      class="memori-auth-widget--password-fieldset"
    >
      <label>
        Password:
         
        <input
          class="memori-auth-widget--input"
          name="password"
          placeholder="Password"
          required=""
          type="password"
        />
      </label>
      <hr />
      <button
        class="memori-button memori-button--outline memori-button--md"
        tabindex="0"
        type="button"
      >
        <span
          class="memori-button__content"
        >
          auth.useRecoveryTokens
        </span>
      </button>
    </fieldset>
    <button
      class="memori-button memori-button--primary memori-button--md memori-auth-widget--submit"
      tabindex="0"
      type="submit"
    >
      <span
        class="memori-button__content"
      >
        confirm
      </span>
    </button>
  </form>
</div>
`;
